syntax = "proto3";
package dron_poc;

import "google/protobuf/timestamp.proto";

option go_package = "dron-proto/";

enum Status {
  STATUS_UNSPECIFIED = 0;
  STATUS_PENDING = 1;
  STATUS_RUNNING = 2;
  STATUS_SUCCESS = 3;
  STATUS_FAILURE = 4;
}

enum Priority {
  PRIORITY_UNSPECIFIED = 0;
  PRIORITY_LOW = 1;
  PRIORITY_NORMAL = 2;
  PRIORITY_HIGH = 3;
  PRIORITY_CRITICAL = 4;
}

message TaskId { int32 value = 1; }
message WorkerID { int32 value = 1; }
message Command { string value = 1; }
message Address { string value = 1; }
message TaskOutput { string value = 1; }

message Worker {
  WorkerID id = 1;
  string name = 2;
  Address address = 3;
  TaskId current_task = 6;
  bool is_alive = 4;
  google.protobuf.Timestamp last_heartbeat = 5;
}

message Task {
  TaskId id = 1;
  string name = 2;
  Command command = 3;
  Status status = 4;
  TaskId assigned_to = 5;
  google.protobuf.Timestamp submitted_at = 6;
  google.protobuf.Timestamp started_at = 7;
  google.protobuf.Timestamp completed_at = 8;
  Priority priority = 9;
}

// To Coordinator
message CreateTaskRequest {
  string name = 1;
  Command command = 2;
  Priority priority = 3;
}

// From Coordinator
message CreateTaskResponse {
  TaskId id = 1;
  bool success = 2;
  string message = 3;
}

// Worker to Coordinator
message RegisterWorkerRequest {
  string name = 1;
  Address address = 2;
}

// Coordinator to Worker
message RegisterWorkerResponse {
  WorkerID id = 1;
  bool success = 2;
  string message = 3;
}

// Worker to Coordinator
message GetTaskRequest {
  WorkerID WorkerId = 1;
}

// Coordinator to Worker
message GetTaskResponse {
  Task task = 1;
  bool has_task = 2;
  string message = 3;
}

// FinishTaskArgs - Arguments when worker reports task completion
message FinishTaskRequest {
  WorkerID id = 1;
  TaskId task_id = 2;
  Status status = 3;
  TaskOutput output = 4;
}

message FinishTaskResponse{
  bool success = 1;
  string message = 2;
}

// Get task status
message GetTaskStatusRequest {
  TaskId task_id = 1;
}

message GetTaskStatusResponse {
  Task task = 1;
  bool found = 2;
  string message = 3;
}

// Get multiple task statuses (for batch queries)
message GetTaskStatusBatchRequest {
  repeated TaskId task_ids = 1;
}

message GetTaskStatusBatchResponse {
  repeated Task tasks = 1;
  int32 pending = 2;
  int32 running = 3;
  int32 completed = 4;
  int32 failed = 5;
}
