syntax = "proto3";
package dron_poc;

import "dron_poc/common.proto";

option go_package = "dron-proto/";


service CoordinatorService {
    rpc CreateTask(CreateTaskRequest) returns (CreateTaskResponse) {};
    rpc RegisterWorker(RegisterWorkerRequest) returns(RegisterWorkerResponse) {};
    rpc GetTask(GetTaskRequest) returns (GetTaskResponse) {};
    rpc FinishTask(FinishTaskRequest) returns(FinishTaskResponse) {};
}
